tests/ui/traits/bound/on-structs-and-enums-xc1.stderr
error[E0277]: the trait bound `{integer}: Trait` is not satisfied
  --> $DIR/on-structs-and-enums-xc1.rs:9:12
   |
LL |         x: 3
   |            ^ the trait `Trait` is not implemented for `{integer}`
   |
note: required by a bound in `Foo`
  --> $DIR/auxiliary/on_structs_and_enums_xc.rs:5:18
   |
LL | pub struct Foo<T:Trait> {
   |                  ^^^^^ required by this bound in `Foo`

error[E0277]: the trait bound `f64: Trait` is not satisfied
  --> $DIR/on-structs-and-enums-xc1.rs:12:14
   |
LL |     let bar: Bar<f64> = return;
   |              ^^^^^^^^ the trait `Trait` is not implemented for `f64`
   |
note: required by a bound in `Bar`
  --> $DIR/auxiliary/on_structs_and_enums_xc.rs:9:16
   |
LL | pub enum Bar<T:Trait> {
   |                ^^^^^ required by this bound in `Bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
